feat: Add content and metadata output to article template

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,10 +23,9 @@
       <header>
         <a href="{{ .Site.BaseURL }}">
           <img
-            width="100px"
-            height="100px"
             src="{{ .Site.Data.person.img }}"
             alt="{{ .Site.Data.person.imgAlt }}"
+            style="width: 100px; height: 100px; object-fit: cover;"
           />
 
           <h1>
