--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,10 +42,9 @@
 
     <figure>
       <img
-        width="100px"
-        height="100px"
         src="{{ .Site.Data.person.img }}"
         alt="{{ .Site.Data.person.imgAlt }}"
+        style="width: 100px; height: 100px; object-fit: cover;"
       />
 
       <figcaption>{{ .Site.Data.person.pronouns }}</figcaption>
