--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,6 +17,12 @@
     <meta name="description" content="{{ .Site.Params.Description }}" />
     <meta name="keywords" content="{{ delimit .Site.Params.Keywords `, ` }}" />
     <meta name="copyright" content="{{ .Site.Params.Copyright }}" />
+
+    <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
+    />
   </head>
   <body>
     {{ block "header" . }}
