--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,7 +6,17 @@
     <ul>
       {{ range .Pages }}
         <li>
-          <a href="{{ .Permalink }}">{{ .Date }} | {{ .Title }}</a>
+          <a href="{{ .Permalink }}">
+            <img
+              src="{{ ((index .Resources 0).Resize `300x`).Permalink }}"
+              alt="{{ .Params.HeaderAlt }}"
+              style="width: 100%; height: 300px; object-fit: cover;"
+            />
+
+            <h3>{{ .Title }}</h3>
+            <p>{{ .Params.Excerpt }}</p>
+            <div>Published at {{ .Date }}</div>
+          </a>
         </li>
       {{ end }}
     </ul>
