--- a/layouts/index.html
+++ b/layouts/index.html
@@ -89,7 +89,17 @@
           {{ if eq .Title "Articles" }}
             {{ range first 5 .Pages }}
               <li>
-                <a href="{{ .Permalink }}">{{ .Date }} | {{ .Title }}</a>
+                <a href="{{ .Permalink }}">
+                  <img
+                    src="{{ ((index .Resources 0).Resize `300x`).Permalink }}"
+                    alt="{{ .Params.HeaderAlt }}"
+                    style="width: 100%; height: 300px; object-fit: cover;"
+                  />
+
+                  <h3>{{ .Title }}</h3>
+                  <p>{{ .Params.Excerpt }}</p>
+                  <div>Published at {{ .Date }}</div>
+                </a>
               </li>
             {{ end }}
           {{ end }}
