feat: Add license to crawled GitHub info

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -137,6 +137,11 @@
                       {{ .language }}
                     </dd>
 
+                    <dt>License</dt>
+                    <dd>
+                      {{ .license }}
+                    </dd>
+
                     <dt>Last update</dt>
                     <dd>
                       {{ .date }}
