feat: Add Twitch status badge

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -74,7 +74,9 @@
                 href="{{ .Site.Data.person.contact.twitch }}"
                 target="_blank"
                 rel="noopener"
-                >Twitch</a
+              >
+                {{ partial "twitch" . }} Twitch
+              </a>
               >
             </li>
           </ul>
