--- a/layouts/index.html
+++ b/layouts/index.html
@@ -31,8 +31,9 @@
             href="{{ .Site.Data.person.contact.twitch }}"
             target="_blank"
             rel="noopener"
-            >Twitch</a
           >
+            {{ partial "twitch" . }} Twitch
+          </a>
         </li>
       </ul>
     </nav>
