--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,5 @@
 {{ define "header" }}
   <header>
-    {{ partial "lastcommit" . }}
-
-
     <nav>
       <ul>
         <li>
@@ -15,16 +12,10 @@
             href="{{ .Site.Data.person.contact.twitter }}"
             target="_blank"
             rel="noopener"
-            >Twitter</a
           >
-        </li>
-        <li>
-          <a
-            href="{{ .Site.Data.person.contact.github }}"
-            target="_blank"
-            rel="noopener"
-            >GitHub</a
-          >
+            Twitter:
+            {{ partial "twitter" . }}
+          </a>
         </li>
         <li>
           <a
@@ -32,8 +23,21 @@
             target="_blank"
             rel="noopener"
           >
-            {{ partial "twitch" . }} Twitch
+            Twitch:
+            {{ partial "twitch" . }}
           </a>
+        </li>
+        <li>
+          <a
+            href="{{ .Site.Data.person.contact.github }}"
+            target="_blank"
+            rel="noopener"
+          >
+            GitHub:
+            {{ partial "github" . }}
+          </a>
+
+          {{ partial "lastcommit" . }}
         </li>
       </ul>
     </nav>
