--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -16,7 +16,7 @@
         const el = document.querySelector(
           id
         )
-        el.textContent = `Last GitHub commit: "${data[0].payload.commits[0]?.message.replace(
+        el.textContent = `Last FOSS commit: "${data[0].payload.commits[0]?.message.replace(
           /(.{20})..+/,
           "$1 …"
         )}" at ${new Date(data[0].created_at).toLocaleString()}`;
@@ -27,7 +27,7 @@
     const el = document.querySelector(
       id
     )
-    el.textContent = `Last GitHub commit: "${lastFetch.payload.commits[0]?.message.replace(
+    el.textContent = `Last FOSS commit: "${lastFetch.payload.commits[0]?.message.replace(
       /(.{20})..+/,
       "$1 …"
     )}" at ${new Date(lastFetch.created_at).toLocaleString()}`;
