--- a/layouts/partials/twitch.html
+++ b/layouts/partials/twitch.html
@@ -1,4 +1,4 @@
 <img
-  src="https://img.shields.io/twitch/status/{{ .Site.Params.Livestreaming.TwitchUser }}?style=plastic"
+  src="https://img.shields.io/twitch/status/{{ .Site.Params.Livestreaming.TwitchUser }}?label={{ .Site.Params.Livestreaming.twitchLabel }}&logo=twitch&logoColor=%23fff&style=plastic"
   alt="Livestream status"
 />
