feat: Add basic Tailwind integration

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,11 +20,7 @@
 
     <link
       rel="stylesheet"
-      href="{{ (resources.Get `css/patternfly.css` | resources.Minify | resources.Fingerprint).Permalink }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ (resources.Get `css/patternfly-addons.css` | resources.Minify | resources.Fingerprint).Permalink }}"
+      href="{{ (resources.Get `css/main.css` | resources.PostCSS | resources.Minify).Permalink }}"
     />
   </head>
   <body>
