--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -38,7 +38,7 @@
     lastCommit.userURL;
 
   document.querySelector("#{{ .ID }} .lastcommit__user__name").innerText =
-    "@"+lastCommit.username;
+    lastCommit.username;
 
   document.querySelector("#{{ .ID }} .lastcommit__user__followercount").innerText =
     lastCommit.userFollowerCount+" Followers";
