--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -20,7 +20,7 @@
         <dd>{{ .Params.Updated }}</dd>
 
         <dt>Written by</dt>
-        <dd>{{ .Site.Params.Author }}</dd>
+        <dd>{{ .Site.Params.Meta.Author }}</dd>
 
         <dt>Estimated time to read</dt>
         <dd>{{ .ReadingTime }} minutes</dd>
