--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,7 +37,7 @@
     <ul>
       <li>
         <a
-          href="https://twitter.com/pojntfx/{{ .Site.Data.person.twitter }}"
+          href="https://twitter.com/{{ .Site.Data.person.twitter }}"
           target="_blank"
           rel="noopener"
           >Follow on Twitter</a
